tests/compile_fail/unknown_attribute.stderr
error: custom attribute panicked
 --> tests/compile_fail/unknown_attribute.rs:7:1
  |
7 | #[proptest_lockstep::lockstep_actions(state = Model)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Unknown key `foobar` in #[action] for `Get`. Expected: real_return, model_return, bridge, opaque_types, uses

warning: unused import: `proptest_lockstep::prelude::*`
 --> tests/compile_fail/unknown_attribute.rs:2:5
  |
2 | use proptest_lockstep::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
